--- a/gantt-addon/pom.xml
+++ b/gantt-addon/pom.xml
@@ -11,8 +11,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vaadin.version>8.1.2</vaadin.version>
-		<vaadin.plugin.version>8.1.2</vaadin.plugin.version>
+		<vaadin.version>8.1.7</vaadin.version>
+		<vaadin.plugin.version>8.1.7</vaadin.plugin.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<!-- ZIP Manifest fields -->
@@ -59,15 +59,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin-compatibility-server</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin-compatibility-client</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin-compatibility-shared</artifactId>
+			<artifactId>vaadin-client</artifactId>
 		</dependency>
 		
 		<!-- This can be replaced with TestNG or some other test framework supported by the surefire plugin -->
